sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:2: error: '=' expected but ')' found.
def cocktailSort2()) {
                   ^AlgCocktailSort2:27: error: illegal start of simple expression
}
^